reports/B_chapter9.err.log
Traceback (most recent call last):
  File "D:\users\anaconda3\lib\site-packages\jupyter_cache\executors\utils.py", line 64, in single_nb_execution
    **kwargs,
  File "D:\users\anaconda3\lib\site-packages\nbclient\client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "D:\users\anaconda3\lib\site-packages\nbclient\util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "D:\users\anaconda3\lib\site-packages\nbclient\util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "D:\users\anaconda3\lib\asyncio\base_events.py", line 579, in run_until_complete
    return future.result()
  File "D:\users\anaconda3\lib\site-packages\nbclient\client.py", line 664, in async_execute
    cell, index, execution_count=self.code_cells_executed + 1
  File "D:\users\anaconda3\lib\site-packages\nbclient\client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "D:\users\anaconda3\lib\site-packages\nbclient\client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
ë‹¤ì–‘í•œ íƒœê·¸ë¥¼ ì´ìš©í•˜ì—¬ ì›¹í˜ì´ì§€ì˜ ë‚´ìš©ì„ í‘œí˜„í•œë‹¤.
CSSëŠ” ì›¹í˜ì´ì§€ì˜ ë‚´ìš©ì„ ìŠ¤íƒ€ì¼ê³¼ ë ˆì´ì•„ì›ƒì„ ì§€ì •í•˜ì—¬ ë‚˜íƒ€ë‚´ëŠ” ìŠ¤íƒ€ì¼ì‹œíŠ¸íŒŒì¼ì´ë‹¤. 
ìë°”ìŠ¤í¬ë¦½íŠ¸ëŠ” ì›¹í˜ì´ì§€ ë‚´ì—ì„œ ìƒí˜¸ì‘ìš©ì´ í•„ìš”í•œ ê²½ìš° ë™ì‘í•˜ë„ë¡ í•œë‹¤.
------------------

[1;36m  File [1;32m"<ipython-input-1-29ada56b4a71>"[1;36m, line [1;32m1[0m
[1;33m    ë‹¤ì–‘í•œ íƒœê·¸ë¥¼ ì´ìš©í•˜ì—¬ ì›¹í˜ì´ì§€ì˜ ë‚´ìš©ì„ í‘œí˜„í•œë‹¤.[0m
[1;37m          ^[0m
[1;31mSyntaxError[0m[1;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-29ada56b4a71>, line 1)

